@@ -10,35 +10,37 @@
     <packaging>jar</packaging>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <outputDirectory>/Users/xiaochun/plugins/jars/</outputDirectory>
+        <outputDirectory>/home/xiaochun/zrlog-plugin/</outputDirectory>
+        <imageName>importer</imageName>
+        <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <native.image.mainClass>com.zrlog.plugin.importer.Application</native.image.mainClass>
+        <native.image.agentMainClass>com.zrlog.plugin.importer.GraalvmAgentApplication</native.image.agentMainClass>
     </properties>
+
 
     <dependencies>
         <dependency>
-            <groupId>com.zrlog</groupId>
-            <artifactId>plugin-common</artifactId>
-            <version>1.3.0</version>
+            <groupId>com.hibegin</groupId>
+            <artifactId>zrlog-plugin-common</artifactId>
+            <version>3.2.14</version>
         </dependency>
         <dependency>
-            <groupId>com.zrlog</groupId>
-            <artifactId>plugin-freemarker-render</artifactId>
-            <version>1.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.3.2</version>
+            <groupId>com.hibegin</groupId>
+            <artifactId>zrlog-plugin-freemarker-render</artifactId>
+            <version>3.2.14</version>
         </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.21</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.8.1</version>
+            <version>1.15.3</version>
         </dependency>
         <dependency>
             <groupId>com.atlassian.commonmark</groupId>
@@ -64,8 +66,8 @@
                 <version>3.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -85,6 +87,103 @@
                     <outputDirectory>${outputDirectory}</outputDirectory>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>java-agent</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                            <arguments>
+                                <argument>--enable-preview</argument>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>${native.image.agentMainClass}</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>native</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.build.directory}/${imageName}</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native.maven.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                            <execution>
+                                <id>test-native</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <fallback>false</fallback>
+                            <buildArgs>
+                                <arg>
+                                    -Ob
+                                    --enable-sbom
+                                    -H:+BuildReport
+                                    -H:+UnlockExperimentalVMOptions
+                                    --allow-incomplete-classpath
+                                    -march=compatibility
+                                    --enable-preview
+                                    -H:DashboardDump=${imageName}
+                                    -H:+DashboardAll
+                                    -H:IncludeResources=
+                                    --enable-monitoring=heapdump
+                                </arg>
+                            </buildArgs>
+                            <mainClass>${native.image.mainClass}</mainClass>
+                            <agent>
+                                <enabled>true</enabled>
+                            </agent>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
